UtahLiveDataTest/src/objects/AwardFundingAccount__c.object
<CustomObject>
    <description>[Business] Associates all the Funding accounts with the Grant/Award</description>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award Funding Accounts</relationshipLabel>
        <relationshipName>Award_Funding_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommittedAmount__c</fullName>
        <description>This field sum rolls up to Funding Account</description>
        <label>Committed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinancialAssistanceAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Financial Assistance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FundingAccount__c</fullName>
        <label>Funding Account</label>
        <referenceTo>FundingAccount__c</referenceTo>
        <relationshipLabel>Award Funding Accounts</relationshipLabel>
        <relationshipName>Award_Funding_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HideActions__c</fullName>
        <formula>OR( 
  Award__r.GrantMonitor__c != $User.Id,
  NOT(ISPICKVAL(Award__r.Status__c, &apos;Grant Monitor Review&apos;)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditAndDelete__c</fullName>
        <formula>OR( ISPICKVAL( Award__r.Status__c , &apos;Approved&apos;),ISPICKVAL( Award__r.Status__c , &apos;Activated&apos;),ISPICKVAL( Award__r.Status__c , &apos;Being Amended&apos;),ISPICKVAL( Award__r.Status__c , &apos;Amended&apos;) )</formula>
        <label>HideEditAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Award Funding Account</label>
    <nameField>
        <displayFormat>AFA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Funding Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>